--- a/client/static/global.scss
+++ b/client/static/global.scss
@@ -1,9 +1,4 @@
-root {
-  --primary-color: #F6BD60;
-  --background-color: #DDD5D0;
-  --black: #161616;
-}
-
+@import "variables.scss";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -32,6 +27,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1;
+  background-color: var(--background-color);
 }
 
 ol, ul {
