--- a/client/static/global.scss
+++ b/client/static/global.scss
@@ -1,7 +1,14 @@
-@import "variables.scss";
+:root {
+  --primary-color: #F6BD60;
+  --background-color: #DDD5D0;
+  --black: #161616;
+  --title-font: "Meno Banner", sans-serif;
+  --body-font: "Acumin", sans-serif;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+a, button, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -15,8 +22,12 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font: 100% var(--body-font);
   vertical-align: baseline;
+  box-sizing: border-box;
+  color: var(--black);
+  text-decoration: none;
+  appearance: none;
 }
 
 /* HTML5 display-role reset for older browsers */
