--- a/client/static/global.css
+++ b/client/static/global.css
@@ -69,3 +69,9 @@ input {
 input:focus-visible {
   outline: 1px solid var(--black);
 }
+
+h1{
+  font-family: var(--title-font);
+  font-weight: 600;
+  font-size: 4rem;
+}
