💄 larger display cta

--- a/client/static/global.css
+++ b/client/static/global.css
@@ -2,7 +2,7 @@
   --primary-color: #F6BD60;
   --background-color: #DDD5D0;
   --black: #161616;
-  --title-font: "Meno Banner", sans-serif;
+  --title-font: "meno-banner", serif;
   --body-font: "Acumin", sans-serif;
 }
 
