✨ login.svelte register.svelte responsive

--- a/client/static/global.css
+++ b/client/static/global.css
@@ -77,6 +77,10 @@ input:focus-visible {
   outline: 1px solid var(--black);
 }
 
+u{
+  text-decoration: underline;
+}
+
 .underline {
   position: relative;
 }
