--- a/client/static/global.css
+++ b/client/static/global.css
@@ -71,6 +71,7 @@ input {
   border: 1px solid var(--black);
   border-radius: 0.25rem;
   transition: transform 0.1s ease-in-out;
+  box-sizing: border-box;
 }
 
 input:focus-visible {
