--- a/client/static/global.css
+++ b/client/static/global.css
@@ -7,6 +7,10 @@
   --body-font: "Acumin", sans-serif;
 }
 
+::selection{
+  background: var(--primary-color);
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, button, abbr, acronym, address, big, cite, code,
