--- a/client/static/global.css
+++ b/client/static/global.css
@@ -154,7 +154,24 @@ strong, strong > * {
   font-weight: 600;
 }
 
-
 em {
   font-style: italic;
+}
+
+.loader {
+  width: 4rem;
+  height: 4rem;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='currentColor' stroke-width='8' stroke-dasharray='150' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+  border-radius: 50%;
+  color: var(--black);
+  animation: loader 1s infinite ease-in-out;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
