🐛 [single product] : block img height size

--- a/client/static/global.css
+++ b/client/static/global.css
@@ -153,8 +153,10 @@ em {
 }
 
 .loader {
-  width: 4rem;
-  height: 4rem;
+  min-width: 4rem;
+  min-height: 4rem;
+  max-width: 4rem;
+  max-height: 4rem;
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='currentColor' stroke-width='8' stroke-dasharray='150' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
   border-radius: 50%;
   color: var(--black);
