--- a/client/static/global.css
+++ b/client/static/global.css
@@ -1,31 +1,102 @@
 :root {
-  --primary-color: #F6BD60;
-  --background-color: #DDD5D0;
+  --primary-color: #54463b;
+  --background-color: #ddd5d0;
   --black: #161616;
+  --white: #fcfbfa;
   --second-black: #323232;
   --title-font: "meno-banner", serif;
   --body-font: "Acumin", sans-serif;
   --max-width-container: 1200px;
+  --error: #ff0000;
 }
 
 ::selection {
   background: var(--primary-color);
-  color: var(--black);
+  color: var(--white);
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, button, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+button,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -45,14 +116,24 @@ time, mark, audio, video {
 }*/
 
 @media (min-width: 1440px) {
-  html, body {
+  html,
+  body {
     font-size: 16px;
   }
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -61,16 +142,20 @@ body {
   background-color: var(--background-color);
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: none;
 }
 
@@ -84,11 +169,12 @@ button {
 }
 
 input {
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--black);
-  border-radius: 0.25rem;
+  padding: 1.5rem;
+  border: none;
+  border-radius: 50px;
   transition: transform 0.1s ease-in-out;
   box-sizing: border-box;
+  background-color: #f0f0f0;
 }
 
 input:focus-visible {
@@ -110,7 +196,7 @@ u {
   left: 0;
   width: 0;
   height: 1px;
-  background-color: var(--black);
+  background-color: currentColor;
   transition: width 0.25s ease-in-out;
 }
 
@@ -126,7 +212,7 @@ h1 {
 
 h2 {
   font-family: var(--title-font);
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 @media (min-width: 1440px) {
@@ -145,7 +231,8 @@ p {
   line-height: 130%;
 }
 
-strong, strong > * {
+strong,
+strong > * {
   font-weight: 600;
 }
 
